Enhance order contact management by restricting updates to orders in CREATED status and updating related tests